# secure-cryptor

./: Cargo.toml  Claude.md  build-output.txt  build.rs  check-pe-security.ps1  readme.md  syscall-audit.sh
.beads/: beads.base.meta.json  beads.left.meta.json  issues.jsonl
.cargo/: audit.toml
.claude/: settings.local.json
.github/workflows/: formal-verification.yml
benches/: README.md  allocator_benchmark.rs  constant_time.rs  memory_pool_benchmark.rs  pqc_benchmark.rs  streaming_benchmark.rs
docs/: MEMORY_SCRUBBING.md  SECURITY_AUDIT.md  SUPPLY_CHAIN_PROVENANCE.md  formal-specifications.md
src/: config.rs  error.rs  lib.rs  main.rs  progress.rs  validation.rs
src/crypto/: aes_gcm.rs  hardware.rs  kdf.rs  mod.rs  pqc.rs  pqc_tests.rs  signatures.rs  streaming.rs
src/daemon/: client.rs  server.rs
src/daemon/service/: linux.rs  macos.rs  windows.rs
src/hsm/: yubikey.rs
src/memory/: allocator.rs  debugger.rs  dump_protection.rs  guard.rs  mod.rs  pool.rs  scrub.rs  tme.rs
src/power/: linux.rs  macos.rs  mod.rs  windows.rs
src/storage/: mod.rs
src/volume/: automount.rs  container.rs  filesystem.rs  format.rs  header.rs  io.rs  keyslot.rs  manager.rs  migration.rs  mod.rs  operations.rs  sector.rs  volumeio_fs.rs
src/volume/mount/: fuse.rs  mod.rs  winfsp.rs
tests/: wycheproof_tests.rs
