[package]
name = "secure-cryptor"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A secure file encryption/decryption library using AES-256-GCM with Argon2id"
repository = "https://github.com/yourusername/secure-cryptor"
keywords = ["encryption", "cryptography", "aes-gcm", "argon2", "security"]
categories = ["cryptography"]

[lib]
name = "secure_cryptor"
path = "src/lib.rs"

[[bin]]
name = "secure-cryptor"
path = "src/main.rs"

[[bin]]
name = "secure-cryptor-gui"
path = "src/bin/gui.rs"

[[bin]]
name = "secure-cryptor-register"
path = "src/bin/register.rs"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_core = "0.6.4"
rpassword = "7.4"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
subtle = "2.6"
zeroize = { version = "1.8", features = ["derive"] }
tempfile = "3.23"
rayon = "1.10"
flate2 = "1.0"
eframe = "0.29"
rfd = "0.15"
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
proptest = "1.5"
criterion = "0.5"
quickcheck = "1.0"

[[bench]]
name = "streaming_benchmark"
harness = false
