[package]
name = "secure-cryptor"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A secure file encryption/decryption library using AES-256-GCM with Argon2id"
repository = "https://github.com/yourusername/secure-cryptor"
keywords = ["encryption", "cryptography", "aes-gcm", "argon2", "security"]
categories = ["cryptography"]

[features]
default = []
encrypted-volumes = ["dep:fuser", "dep:winfsp"]

[lib]
name = "secure_cryptor"
path = "src/lib.rs"

[[bin]]
name = "secure-cryptor"
path = "src/main.rs"

[[bin]]
name = "secure-cryptor-gui"
path = "src/bin/gui/main.rs"

[[bin]]
name = "secure-cryptor-register"
path = "src/bin/register/mod.rs"

[dependencies]
aes-gcm = "0.10.3"
xts-mode = "0.5"
aes = "0.8"
argon2 = "0.5.3"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_core = "0.6.4"
rpassword = "7.4"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
subtle = "2.6"
zeroize = { version = "1.8", features = ["derive"] }
tempfile = "3.23"
rayon = "1.10"
flate2 = "1.0"
eframe = "0.29"
rfd = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
serde-big-array = "0.5"
dirs = "5.0"
notify-rust = "4.11"
tray-icon = "0.18"
image = "0.25"

[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.14", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
fuser = { version = "0.14", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winfsp = { version = "0.12", optional = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
proptest = "1.5"
criterion = "0.5"
quickcheck = "1.0"

[[bench]]
name = "streaming_benchmark"
harness = false
