[package]
name = "tesseract"
version = "1.2.0"
edition = "2021"
license = "MIT"
description = "Tesseract - Advanced encryption suite with post-quantum cryptography"
repository = "https://github.com/dollspace-gay/Tesseract"
keywords = ["encryption", "cryptography", "aes-gcm", "argon2", "security"]
categories = ["cryptography"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-bulk-memory"]

[features]
default = ["post-quantum", "compression"]
encrypted-volumes = ["dep:fuser", "dep:winfsp"]

# WASM build profiles
wasm-minimal = []  # Only AES-256-GCM + Argon2id (smallest)
wasm-full = ["post-quantum", "compression"]  # All features (default)

# Individual feature flags
post-quantum = ["dep:ml-kem", "dep:ml-dsa", "dep:rand09", "dep:chacha20"]  # Include ML-KEM-1024 and ML-DSA post-quantum cryptography
compression = ["dep:flate2"]  # Include DEFLATE compression support

# Hardware Security Module support
yubikey = ["dep:hidapi", "dep:sha1", "dep:hmac"]  # YubiKey HMAC-SHA1 challenge-response via USB HID

[lib]
name = "tesseract_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tesseract"
path = "src/main.rs"

[[bin]]
name = "tesseract-gui"
path = "src/bin/gui/main.rs"

[[bin]]
name = "tesseract-register"
path = "src/bin/register/mod.rs"

[dependencies]
aes-gcm = "0.11.0-rc.2"
xts-mode = "0.5"
aes = "0.8"
argon2 = "0.6.0-rc.2"
generic-array = { version = "1.1", features = ["compat-0_14"] }
rand = { version = "0.10.0-rc.5", features = ["std", "os_rng"] }
rand_core = "0.10.0-rc-2"
# rand 0.9 for ML-KEM compatibility (ml-kem uses rand_core 0.9)
rand09 = { package = "rand", version = "0.9.2", optional = true }
ml-kem = { version = "0.3.0-pre.2", optional = true }
ml-dsa = { version = "0.1.0-rc.2", features = ["zeroize"], optional = true }
chacha20 = { version = "0.10.0-rc.5", optional = true }
blake3 = "1.5"
thiserror = "1.0"
subtle = "2.6"
zeroize = { version = "1.8", features = ["derive"] }
rayon = "1.10"
flate2 = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
lru = "0.16"
serde-big-array = "0.5"
hex = "0.4"
base64 = "0.22"

# Memory protection
libc = "0.2"

# Hybrid PQC key derivation (used on all platforms)
hkdf = "0.11"
sha2 = "0.9"

# WebAssembly support
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", features = ["Window", "Crypto"] }
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Native (non-WASM) dependencies for binaries and platform-specific features
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rpassword = "7.4"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.23"
eframe = "0.29"
rfd = "0.15"
tokio = { version = "1", features = ["full"] }

# Hardware Security Module support
# Direct USB HID implementation for YubiKey
hidapi = { version = "2.6", optional = true }
sha1 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "winnt", "debugapi", "processthreadsapi", "winbase"] }
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
windows-service = "0.7"
dirs = "5.0"
notify-rust = "4.11"
tray-icon = "0.18"
image = "0.25"
ctrlc = "3.4"
winreg = "0.52"
winfsp = { version = "0.12", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.16", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
fuser = { version = "0.16", optional = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
proptest = "1.5"
criterion = "0.5"
quickcheck = "1.0"
wasm-bindgen-test = "0.3"

[[bench]]
name = "streaming_benchmark"
harness = false

[[bench]]
name = "memory_pool_benchmark"
harness = false

[[bench]]
name = "allocator_benchmark"
harness = false

[[bench]]
name = "pqc_benchmark"
harness = false

[profile.release]
opt-level = "z"  # Optimize for size
lto = true  # Link-time optimization for better dead code elimination
codegen-units = 1  # Better optimization at cost of longer build time
strip = true  # Strip symbols
panic = "abort"  # Smaller panic handler

[profile.release-perf]
inherits = "release"
opt-level = 3  # Optimize for performance
lto = true
codegen-units = 1

